--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=NTM3Njc4NTA3MDQ4OTYwMDEw.XoG04A.HS_bM-mZZ_jE95DhDMr2rhiKlbA
+TOKEN=NTM3Njc4NTA3MDQ4OTYwMDEw.XoMBLw.Hu90I898D92vn5-H0c_U793iCjQ
 FORTNITE=8ed2af18-08a9-465c-b822-973940a592b7
