--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "better-discord-antispam-fr": "^2.0.0",
     "circular-json": "^0.5.9",
     "common-tags": "^1.8.0",
-    "discord-antispam-fr": "^2.0.0",
+    "betterdiscord-antispam-fr": "^2.0.0",
     "discord.js": "^11.6.4",
     "dotenv": "^8.2.0",
     "fortnite": "^4.3.2",
