--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=NTM3Njc4NTA3MDQ4OTYwMDEw.XoMChA.l4rY70QSfF8lKf7a6f_i9RJf9k8
+TOKEN=NTM3Njc4NTA3MDQ4OTYwMDEw.XrJsWQ.QmQqXKZ0ZAkJnmHU4yvrurfBf64
 FORTNITE=68e0bff9-69e0-459e-83d0-f0a11985a8f5
